2001-04-21  Andreas Jaeger  <aj@suse.de>

	* manager.c (__pthread_manager): Add noreturn
	attribute.
	(pthread_start_thread): Likewise, remove return statement.
	(pthread_start_thread_event): Likewise.
	Add noreturn attribute for pthread_handle_exit.
	* weaks.c: Add noreturn attribute for pthread_exit.

	* internals.h: Add __pthread_clock_gettime and
	__pthread_clock_settime prototypes.

2001-04-21  Ulrich Drepper  <drepper@redhat.com>

	* internals.h: Include <cpuclock-init.h>.
	(struct _pthread_descr_struct): Add p_cpuclock_offset field if
	CPUCLOCK_VARDEF is defined.
	* pthread.c (__pthread_initialize_minimal): Initialize
	p_cpuclock_offset field for main thread if CPUCLOCK_INIT is defined.
	* manager.c (pthread_start_thread): Set p_cpuclock_offset field
	for new thread to current CPU clock value.

	* sysdeps/i386/useldt.h: Extend all the macros to handle 8-byte values.

	* sysdeps/i386/i586/Makefile: New file.
	* sysdeps/i386/i586/Versions: New file.
	* sysdeps/i386/i586/ptclock_gettime.c: New file.
	* sysdeps/i386/i586/ptclock_settime.c: New file.
	* sysdeps/i386/i686/Implies: New file.

2001-04-18  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/Makefile: Put specs into
	$generated, not $postclean-generated.

2001-04-18  Andreas Jaeger  <aj@suse.de>

	* Makefile (otherlibs): Added.

2001-04-18  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/Makefile: New file.

2001-04-16  Ulrich Drepper  <drepper@redhat.com>

	* signals.c (sigwait): NSIG is no signal number.  Block all
	signals while in signal handler for signals in SET.
	Patch by Manfred Spraul <manfred@colorfullife.com>.

2001-04-12  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel.c: Disable most tests.  Add new test where all
	cleanup handlers must run.
	* Makefile (tests): Add tst-cancel again.

	* cancel.c (__pthread_perform_cleanup): Correct condition for
	leaving cleanup loop early.
